[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/admin/space_settings_dialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="save_btn_normal"]
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="delete_btn_normal"]
bg_color = Color(0.85, 0.24, 0.24, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="SpaceSettingsDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(440, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Space Settings"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
text = "✕"
flat = true

[node name="NameLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "SERVER NAME"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="NameInput" type="LineEdit" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
placeholder_text = "Server name"

[node name="DescLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "DESCRIPTION"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="DescInput" type="TextEdit" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
placeholder_text = "Server description"

[node name="VerificationRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="VerificationLabel" type="Label" parent="CenterContainer/Panel/VBox/VerificationRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Verification Level"

[node name="VerificationInfo" type="Label" parent="CenterContainer/Panel/VBox/VerificationRow"]
layout_mode = 2
text = "ⓘ"
tooltip_text = "Controls how strictly members are verified before they can interact. Higher levels require additional account verification."
mouse_filter = 0
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 14

[node name="VerificationOption" type="OptionButton" parent="CenterContainer/Panel/VBox/VerificationRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)

[node name="NotificationsRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="NotificationsLabel" type="Label" parent="CenterContainer/Panel/VBox/NotificationsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default Notifications"

[node name="NotificationsInfo" type="Label" parent="CenterContainer/Panel/VBox/NotificationsRow"]
layout_mode = 2
text = "ⓘ"
tooltip_text = "The default notification setting applied to new members. They can override this individually."
mouse_filter = 0
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 14

[node name="NotificationsOption" type="OptionButton" parent="CenterContainer/Panel/VBox/NotificationsRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)

[node name="PublicRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="PublicCheck" type="CheckBox" parent="CenterContainer/Panel/VBox/PublicRow"]
layout_mode = 2
text = "Public server"

[node name="PublicInfo" type="Label" parent="CenterContainer/Panel/VBox/PublicRow"]
layout_mode = 2
text = "ⓘ"
tooltip_text = "When enabled, this space appears in the public server directory and anyone can join."
mouse_filter = 0
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 14

[node name="SaveRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 2

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/VBox/SaveRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 36)
text = "Save"
theme_override_styles/normal = SubResource("save_btn_normal")

[node name="ErrorLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
autowrap_mode = 2

[node name="DangerZone" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separator" type="HSeparator" parent="CenterContainer/Panel/VBox/DangerZone"]
layout_mode = 2
theme_override_colors/separator_color = Color(0.95, 0.3, 0.3, 0.4)

[node name="DangerLabel" type="Label" parent="CenterContainer/Panel/VBox/DangerZone"]
layout_mode = 2
text = "DANGER ZONE"
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 11

[node name="DeleteButton" type="Button" parent="CenterContainer/Panel/VBox/DangerZone"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Delete Server"
theme_override_styles/normal = SubResource("delete_btn_normal")
